--- a/main.html
+++ b/main.html
@@ -4,10 +4,52 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
+	<title>Semantic Tables and Media</title>
 </head>
 
 <body>
 	<!-- the entire body must be written by student -->
+	<!-- Semantic Table -->
+	<table>
+		<thead>
+			<tr>
+				<th>Roll numbers</th>
+				<th>Names</th>
+			</tr>
+		</thead>
+		<tbody>
+			<tr>
+				<td>1</td>
+				<td>Sam</td>
+			</tr>
+			<tr>
+				<td>2</td>
+				<td>Bob</td>
+			</tr>
+			<tr>
+				<td>3</td>
+				<td>Alice</td>
+			</tr>
+		</tbody>
+	</table>
+	<h2>List of medias</h2>
+	<ol>
+		<li>
+			<img src = "https://picsum.photos/id/123/200/300" alt = "Sample Image">
+		</li>
+		<li>
+			<video controls>
+				<source src = "http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4">
+				Your browser does not support this video tag
+			</video>
+		</li>
+		<li>
+			<audio controls>
+				<source src = "http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg">
+				Your browser does not support this audio tag
+			</audio>
+		</li>
+	</ol>
     <script type="text/javascript" src="./script.js">
 </script>
 
