--- a/main.html
+++ b/main.html
@@ -39,13 +39,13 @@
 		</li>
 		<li>
 			<video controls>
-				<source src = "http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4">
+				<source src = "http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" type = "video/mp4">
 				Your browser does not support this video tag
 			</video>
 		</li>
 		<li>
 			<audio controls>
-				<source src = "http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg">
+				<source src = "http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" type = "audio/ogg">
 				Your browser does not support this audio tag
 			</audio>
 		</li>
