--- a/main.html
+++ b/main.html
@@ -44,8 +44,8 @@
 			</video>
 		</li>
 		<li>
-			<audio controls>
-				<source src = "http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" type = "audio/ogg">
+			<audio controls
+				 src = "http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" >
 				Your browser does not support this audio tag
 			</audio>
 		</li>
